DT-2469, fix horizontal scroll on mobile

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -13,7 +13,7 @@
             margin: 50px auto 0;
         }
         @media @tablet {
-            margin: 15px 30px 0;
+            margin: 15px 0 0;
         }
     }
 }
